# final-capstone-project-agentic-ai-lecture-notes-summarizer

./: README.md  app.py  notes_summarizer (1).py  notes_summarizer.py  ocrimage.py  pyproject.toml  requirements.txt  text.py  textPDF.py
tests/: .env  test_text.py
