[project]
name = "final-capstone-project-agentic-ai-lecture-notes-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pypdf>=4.0.0",
    "pytesseract>=0.3.13",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]
